# oblivion-reverse

./: CMakeLists.txt  LICENSE  README.md
docs/: building.md  kigrax_hlil_notes.md  monster_ai_discrepancies.md  oblivion_reverse_analysis.md  parity-plan.md  spawn_manifest_notes.md  spawn_manifest_report.md
docs/manifests/: spawn_manifest.json  spawn_manifest_comparison.json
pack/: Oblivion manual.txt  autoexec.cfg  config.cfg  oblivion.bat  oblivion.c  oblivion.cfg
pack/demos/: demo1.dm2  demo2.dm2
pack/env/: obm_bk.tga  obm_dn.tga  obm_ft.pcx  obm_ft.tga  obm_rt.tga  obm_up.pcx  unit1_bk.pcx  unit1_dn.pcx  unit1_lf.pcx  unit1_lf.tga  unit1_rt.pcx  unit1_up.tga
pack/maps/: COMM1.BSP  COMM2.BSP  COMM3.BSP  Centrifuge.bsp  Medieval.bsp  barrack1.bsp  barrack1df.bsp  barrack2.bsp  barrack3.bsp  barracko.bsp  base1.bsp  base1a.bsp  friction.bsp  harvester1.bsp  harvester2.bsp  harvester3.bsp  huba.bsp  hubb.bsp  hubc.bsp  hubd.bsp  icepick.bsp  obboss.bsp  research1.bsp  sheild1.bsp  shield1.bsp  space1.bsp  space2.bsp  w1.bsp  w2.bsp  w3.bsp  w4.bsp  w5.bsp
pack/models/weapons/: skin.pcx
pack/pics/: a_bullets.pcx  a_cells.pcx  a_dod.pcx  a_grenades.pcx  a_mines.pcx  a_plasma1.pcx  a_plasma2.pcx  a_rockets.pcx  a_shells.pcx  a_slugs.pcx  anum_0.pcx  anum_1.pcx  anum_2.pcx  anum_3.pcx  anum_4.pcx  anum_5.pcx  anum_6.pcx  anum_7.pcx  anum_8.pcx  anum_9.pcx  anum_minus.pcx  backtile.pcx  ch1.pcx  ch2.pcx  ch3.pcx  conback.PCX  conbackbw.PCX  conbackjohn.pcx  conbackuri.pcx  conchars.pcx  help.pcx  i_airstrike.pcx  i_bodyarmor.pcx  i_combatarmor.pcx  i_health.pcx  i_help.pcx  i_jacketarmor.pcx  i_pack.pcx  i_powerscreen.pcx  i_powershield.pcx  (+41 more)
pack/sprites/: s_deatom1.sp2  s_deatom1_0.pcx  s_deatom1_1.pcx  s_deatom1_2.pcx
pack/textures/barracks/: base1_6.wal  button1.wal  button1b.wal  comp1_1.wal  comp1_2.wal  crate14.wal  crate15.wal  cyldoor1.wal  cyldoor2.wal  door2.wal  door4.wal  floor3.wal  floor3b.wal  floor3d.wal  floor5b.wal  floor5d.wal  floor5e.wal  (+128 more)
pack/video/: idlog.cin  ntro.cin
src/: 3.18_changes.txt  makezip  makezip.bat  readme.txt
src/game/: g_ai.c  g_camera.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_mission.c  g_monster.c  g_rtdu.c  g_rtrain.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  game.001  game.dsp  m_actor.c  m_actor.h  m_badass.c  m_badass.h  m_cyborg.c  m_kigrax.c  m_sentinel.c  m_soldier.c  m_spider.c  p_client.c  p_hud.c  p_menu.c  p_view.c  p_weapon.c
tests/: expected_spawn_manifest.json  test_actor_chat_cooldown.py  test_actor_path_runtime.py  test_actor_spawn_and_mission_persistence.py  test_cyborg_regression.py  test_func_water_spawnflags.py  test_hlil_itemlist_sync.py  test_hlil_parser_spawn_map.py  test_hlil_parser_split_sources.py  test_kigrax_regression.py  test_mission_save_regression.py  test_spawn_manifest.py  test_spider_regression.py
tests/fixtures/: cyborg_expected_behaviour.json  kigrax_expected_spawn.json  spider_expected_behaviour.json
tools/: __init__.py  extract_spawn_manifest.py  interpret_hlil_split.py
(+852 files in other folders)
